fix: margin/spacing on taskcards

--- a/client/components/TaskCard.css
+++ b/client/components/TaskCard.css
@@ -6,8 +6,8 @@
   width: 100%;
   padding: 0.5em;
   background-color: #fff;
-  margin: 0.5em;
   border-radius: 5px;
+  margin: 0.5em 0;
 }
 
 .titleAndCreator {
